frame/support/test/tests/construct_runtime_ui/undefined_call_part.stderr
error: `Pallet` does not have #[pallet::call] defined, perhaps you should remove `Call` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_call_part.rs:5:1
   |
5  |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
49 | / construct_runtime! {
50 | |     pub struct Runtime
51 | |     {
52 | |         System: frame_system::{Pallet, Call, Storage, Config, Event<T>},
53 | |         Pallet: pallet::{Pallet, Call},
54 | |     }
55 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_call_check::is_call_part_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0437]: type `BlockNumber` is not a member of trait `frame_system::Config`
  --> tests/construct_runtime_ui/undefined_call_part.rs:26:2
   |
26 |     type BlockNumber = u32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ not a member of trait `frame_system::Config`
